# diploma-thesis

./: .gitignore  CMakeLists.txt  README.md  ThHorizontalBreak.qml  ThHorizontalCategory.qml  ThHorizontalSeparator.qml  ThPanel.qml  ThWindowBar.qml  calibrationbackend.cpp  calibrationbackend.hpp  configurator.cpp  configurator.hpp  main.cpp  main.qml  plotter.cpp  plotter.h  qml.qrc  recorderbackend.cpp  recorderbackend.hpp  window.cpp  window.hpp
lib/: CMakeLists.txt  bodypart.hpp  buffer.cpp  buffer.hpp  classifier.cpp  classifier.hpp  sample.hpp  signalpower.cpp  signalpower.hpp  spectrum.hpp  stream.cpp  stream.hpp  streamreader.cpp  streamreader.hpp
lib/ext/lib/cmake/LSL/: LSLConfigVersion.cmake  LSLTargets.cmake
